# hawkinPy

./: .gitignore  404.html  LICENSE  LICENSE.txt  README.md  hawkinAPIscript.py  hdforceTestNotebook.ipynb  index.html  mkdocs.yml  pyproject.toml  setup.py  template.env  testhwkinPy.py
.github/workflows/: Publish-TestPyPI.yml  PythonPushTest.yml  build-publish-testpypi.yml  push-test.yml  python-docpage.yml  tag-release-publish.yml  update-readme.yml
About/changelog/: index.html
About/contact/: index.html
About/license/: index.html
Functions/AuthManager/: index.html
Functions/CreateAthletes/: index.html
Functions/GetAthletes/: index.html
Functions/GetForceTime/: index.html
Functions/GetGroups/: index.html
Functions/GetMetrics/: index.html
Functions/GetTags/: index.html
Functions/GetTeams/: index.html
Functions/GetTests/: index.html
Functions/GetTestsAth/: index.html
Functions/GetTestsGroup/: index.html
Functions/GetTestsTeam/: index.html
Functions/GetTestsType/: index.html
Functions/GetTypes/: index.html
Functions/LoggerConfig/: index.html
Functions/UpdateAthletes/: index.html
UserGuide/EnvSetUp/: index.html
UserGuide/Examples/: index.html
UserGuide/GetData/: index.html
docs/: index.md
docs/About/: changelog.md  contact.md  license.md
docs/Functions/: AuthManager.md  BuildDB.md  CreateAthletes.md  GetAthletes.md  GetForceTime.md  GetGroups.md  GetMetrics.md  GetTags.md  GetTeams.md  GetTests.md  GetTestsAth.md  GetTestsGroup.md  GetTestsTeam.md  GetTestsType.md  GetTypes.md  LogConfig.md  LoggerConfig.md  SyncDB.md  UpdateAthletes.md
docs/UserGuide/: EnvSetUp.md  Examples.md  GetData.md  LocalDatabase.md
hdforce/: AuthManager.py  BuildDB.py  Classes.py  CreateAthletes.py  GetAccess.py  GetAthletes.py  GetForceTime.py  GetGroups.py  GetMetrics.py  GetTags.py  GetTeams.py  GetTests.py  GetTestsAth.py  GetTestsGroup.py  GetTestsTeam.py  GetTestsType.py  GetTypes.py  LogConfig.py  LoggerConfig.py  SyncDB.py  UpdateAthletes.py  __init__.py  utils.py
hdforce/data/: MetricDictionary.parquet
search/: search_index.json
tests/: test_CreateAthlete.py  test_GetAthlete.py  test_GetForceTime.py  test_GetGroups.py  test_GetMetrics.py  test_GetTags.py  test_GetTeams.py  test_GetTests.py  test_GetTestsAth.py  test_GetTestsGroup.py  test_GetTestsTeam.py  test_GetTestsType.py  test_GetTypes.py  test_UpdateAthlete.py
