[tool.poetry]
name = "hdforce"
version= "1.1.1"
description = "Get your data from the Hawkin Dynamics API"
authors = ["laureng-hd <lauren@hawkindynamics.com>"]
readme = "README.md"
keywords = ["hawkin", "force plates", "sports science"]
homepage = "https://www.hawkindynamics.com/"
repository = "https://github.com/HawkinDynamics/hawkinPy"
documentation = "https://hawkindynamics.github.io/hawkinPy/"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pytest = "^8.2.0"
flake8 = "^7.0.0"
pydantic = "^2.0.0" 

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"